2000-08-31  Martin Baulig  <baulig@suse.de>

	* configure.in: Only check for GNOME if we're on the GNOME 1.2
	platform.

	* configure.in: Don't modify CFLAGS but set VFS_CLFAGS instead.
	Otherwise CFLAGS gets longer every time config.status is run.
	* */Makefile.am (INCLUDES): Add $(VFS_CFLAGS).

	* configure.in: Don't put -Werror into CFLAGS but into WERROR
	and AC_SUBST it. Some configure checks don't work with -Werror.
	* */Makefile.am (INCLUDES): Add $(WERROR).

2000-08-31  Martin Baulig  <baulig@suse.de>

	* libgnomevfs/gnome-vfs-private-utils.c
	(gnome_vfs_i18n_get_language_list): New function. This calls
	gnome_i18n_get_language list for the GNOME 1.2.x platform and
	g_i18n_get_language_list for the GNOME 2.x platform and copies
	the returned list.

	* libgnomevfs/gnome-vfs-mime-info.c (gnome_vfs_mime_init): Call
	gnome_vfs_i18n_get_language_list and don't #include the GNOME
	header files.
	* libgnomevfs/gnome-vfs-application-registry.c: Likewise.

2000-08-31  Martin Baulig  <baulig@suse.de>

	* acconfig.h (GNOME_PLATFORM_VERSION): Added.  This is hardcoded
	to be 1002000 in configure.in for the GNOME 1.2.x platform.

	* configure.in (PLATFORM_GNOME_2): New automake conditional; true
	if GNOME_PLATFORM_VERSION >= 1095000 (you need to patch configure.in
	to make this happen, ie. when compiling for gnome-libs HEAD).

2000-08-31  Mathieu Lacage  <mathieu@eazel.com>

	fixes bugs 1119 and 1839
	
	* data/mime/gnome-vfs.keys: add a mime type for testing.
	* libgnomevfs/gnome-vfs-mime-handlers.c:
	(gnome_vfs_mime_get_default_action_type),
	(gnome_vfs_mime_edit_user_file_full),
	(gnome_vfs_mime_add_extension), (gnome_vfs_mime_remove_extension):
	update to API changes below. move saving code to gnome-vfs-mime-info.c
	* libgnomevfs/gnome-vfs-mime-info.c: (does_string_contains_caps),
	(context_new), (context_destroy_and_unlink), (language_level),
	(context_add_key), (load_mime_type_info_from),
	(load_mime_list_info_from), (mime_info_load), (mime_list_load),